--- a/ports/devel/py-oslo.messaging/Makefile
+++ b/ports/devel/py-oslo.messaging/Makefile
@@ -13,8 +13,7 @@ COMMENT=	Oslo Messaging API
 LICENSE=	APACHE20
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pbr>=2.0.0:devel/py-pbr
-RUN_DEPENDS:=	${BUILD_DEPENDS}
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}futurist>=0.11.0:devel/py-futurist \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}futurist>=0.11.0:devel/py-futurist \
 		${PYTHON_PKGNAMEPREFIX}oslo.config>=4.0.0:devel/py-oslo.config \
 		${PYTHON_PKGNAMEPREFIX}oslo.log>=3.22.0:devel/py-oslo.log \
 		${PYTHON_PKGNAMEPREFIX}oslo.utils>=3.20.0:devel/py-oslo.utils \
