--- a/ports/devel/py-oslo.middleware/Makefile
+++ b/ports/devel/py-oslo.middleware/Makefile
@@ -13,8 +13,7 @@ COMMENT=	Oslo Middleware library
 LICENSE=	APACHE20
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pbr>=2.0.0:devel/py-pbr
-RUN_DEPENDS:=	${BUILD_DEPENDS}
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}Jinja2>=2.8:devel/py-Jinja2 \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Jinja2>=2.8:devel/py-Jinja2 \
 		${PYTHON_PKGNAMEPREFIX}oslo.config>=4.0.0:devel/py-oslo.config \
 		${PYTHON_PKGNAMEPREFIX}oslo.context>=2.14.0:devel/py-oslo.context \
 		${PYTHON_PKGNAMEPREFIX}oslo.i18n>=2.1.0:devel/py-oslo.i18n \
