--- a/ports/devel/py-keystoneauth1/Makefile
+++ b/ports/devel/py-keystoneauth1/Makefile
@@ -13,8 +13,7 @@ LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pbr>=2.0.0:devel/py-pbr
-RUN_DEPENDS:=	${BUILD_DEPENDS}
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}iso8601>=0.1.11:devel/py-iso8601 \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}iso8601>=0.1.11:devel/py-iso8601 \
 		${PYTHON_PKGNAMEPREFIX}positional>=1.1.1:devel/py-positional \
 		${PYTHON_PKGNAMEPREFIX}requests>=2.14.0:www/py-requests \
 		${PYTHON_PKGNAMEPREFIX}six>=1.9.0:devel/py-six \
