--- a/ports/devel/py-oslo.policy/Makefile
+++ b/ports/devel/py-oslo.policy/Makefile
@@ -1,24 +1,25 @@
 # Created by: Alexander Nusov <alexander.nusov@nfvexpress.com>
-# $FreeBSD: head/devel/py-oslo.concurrency/Makefile 432712 2017-01-29 10:18:27Z novel $
+# $FreeBSD: head/devel/py-oslo.policy/Makefile 432724 2017-01-29 12:03:15Z novel $
 
-PORTNAME=	oslo.concurrency
-PORTVERSION=	3.21.1
+PORTNAME=	oslo.policy
+PORTVERSION=	1.25.1
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	skonmeme@gmail.com
-COMMENT=	Oslo Concurrency library
+COMMENT=	Oslo Policy library
 
 LICENSE=	APACHE20
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pbr>=2.0.0:devel/py-pbr
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}enum34>0:devel/py-enum34 \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}requests>=2.14.2:www/py-requests \
 		${PYTHON_PKGNAMEPREFIX}oslo.config>=4.0.0:devel/py-oslo.config \
 		${PYTHON_PKGNAMEPREFIX}oslo.i18n>=2.1.0:devel/py-oslo.i18n \
-		${PYTHON_PKGNAMEPREFIX}oslo.utils>=3.20.0:devel/py-oslo.utils \
+		${PYTHON_PKGNAMEPREFIX}oslo.serialization>=1.10.0:devel/py-oslo.serialization \
+		${PYTHON_PKGNAMEPREFIX}yaml>=3.10.0:devel/py-yaml \
 		${PYTHON_PKGNAMEPREFIX}six>=1.9.0:devel/py-six \
-		${PYTHON_PKGNAMEPREFIX}fasteners>=0.7:devel/py-fasteners
+		${PYTHON_PKGNAMEPREFIX}stevedore>=1.20.0:devel/py-stevedore
 
 NO_ARCH=	yes
 
