--- a/ports/security/py-keystone/Makefile
+++ b/ports/security/py-keystone/Makefile
@@ -12,8 +12,7 @@ COMMENT=	OpenStack Keystone
 LICENSE=	APACHE20
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pbr>=2.0.0:devel/py-pbr
-RUN_DEPENDS:=	${BUILD_DEPENDS}
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}Babel>=2.3.4:devel/py-babel \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Babel>=2.3.4:devel/py-babel \
 		${PYTHON_PKGNAMEPREFIX}webob>=1.7.1:www/py-webob \
 		${PYTHON_PKGNAMEPREFIX}PasteDeploy>=1.5.0:www/py-pastedeploy \
 		${PYTHON_PKGNAMEPREFIX}Paste>0:www/py-paste \
